add missing screen for several functions

--- a/src/app/layout/components/navbar/vertical/style-2/style-2.component.html
+++ b/src/app/layout/components/navbar/vertical/style-2/style-2.component.html
@@ -2,8 +2,8 @@
 
     <div class="logo d-sm-none">
         <!-- <img class="logo-icon" src="assets/images/logos/fuse.svg"> -->
-        <img class="logo-icon d-block d-sm-none" src="/assets/images/logos/logo-small.png">
-        <span class="logo-text"><b>EPAYMENT</b></span>
+        <img class="logo-icon d-block d-sm-none" src="/assets/images/logos/logo-white.png">
+        <span class="logo-text"><b>Login template</b></span>
     </div>
 
     <button mat-icon-button class="toggle-sidebar-folded"
