--- a/src/app/layout/components/navbar/vertical/style-2/style-2.component.scss
+++ b/src/app/layout/components/navbar/vertical/style-2/style-2.component.scss
@@ -85,8 +85,9 @@ navbar {
                 align-items: center;
 
                 .logo-icon {
-                    //width: 146px;
-                    // height: 38px;
+                    width: 36px;
+                    height: 38px;
+                    object-fit: contain;
                 }
 
                 .logo-text {
