--- a/src/app/main/pages/qlht/quanlynguoidung/quanlynguoidung.component.html
+++ b/src/app/main/pages/qlht/quanlynguoidung/quanlynguoidung.component.html
@@ -3,17 +3,7 @@
         <h3>Quản lý người dùng</h3>
         <div class="container">
             <div class="flex-row">
-
-                <p style="width: 10%;">Loại đơn vị</p>
-                <mat-form-field appearance="outline" style="width: 20%;">
-                    <mat-label>Loại đơn vị</mat-label>
-                    <mat-select [(ngModel)]="searchItem.loaiDonVi">
-                        <mat-option [value]='-99'>---Tất cả---</mat-option>
-                        <mat-option *ngFor="let item of loaiDonVi" [value]="item.id">{{item.tenLoaiDonVi}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <p style="width: 10%;  margin-left: 5%;">Trạng thái</p>
+                <p style="width: 10%;">Trạng thái</p>
                 <mat-form-field appearance="outline" style="width: 20%;">
                     <mat-label>Trạng thái</mat-label>
                     <mat-select [(ngModel)]="searchItem.trangThai">
@@ -94,12 +84,6 @@
                             {{element.tenDonVi}}
                         </td>
                     </ng-container>
-                    <!-- <ng-container matColumnDef="loaiDonVi">
-                        <th mat-header-cell *matHeaderCellDef>Loại đơn vị</th>
-                        <td mat-cell *matCellDef="let element">
-                            {{element.tenDonVi == 0 ? "Nhà cung cấp" : (element.tenDonVi == 1 ? "Đơn vị thẩm định" : "Tổng công ty")}}
-                        </td>
-                    </ng-container> -->
                     <ng-container matColumnDef="accountType">
                         <th mat-header-cell *matHeaderCellDef style="width: 100px">Loại tài khoản</th>
                         <td mat-cell *matCellDef="let element" style="text-align: center">
